--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
     <title>👋 hello. – volkerotto.net</title>
     <meta name="description" content="My name is Volker Otto and as a web industry professional with many years of experience, I am currently serving as the CTO @ Digital Masters, where I lead the development of cutting-edge e-commerce and platform solutions for our clients." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,follow" />
+    <meta name="robots" content="index,follow">
 
-    <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}" />
+    <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/reset.css">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
-    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico"/>
+    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
     <script src="{{ site.url }}/assets/js/main.js"></script>
 </head>
 <!--
