--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>👋 hello @ volkerotto.net</title>
-    <meta name="description" content="My name is Volker Otto and as a web industry professional with many years of experience, I am currently serving as the CTO @ Digital Masters, where I lead the development of cutting-edge e-commerce and platform solutions for our clients.">
+    <title>
+      {% if page.title %}
+        {{ page.title }} | {{ site.title }}
+      {% else %}
+        {{ site.title }}
+      {% endif %}
+    </title>
+    <meta name="description" content="{{ page.desc | default: site.desc }}">
     <meta name="author" content="Volker Otto">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,follow">
+  
+    {% if page.noindex or layout.noindex or site.noindex %}
+      <meta name="robots" content="noindex, nofollow">
+    {% else %}
+      <meta name="robots" content="index, follow">
+    {% endif %}
 
     <link rel="canonical" href="{{ site.url }}{{ page.url | remove:'index.html'}}">
     
