--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,38 @@
   -->
 <body>
   {{ content }}
+
+  <footer class="footer section">
+    <div class="container">
+      <p><strong><em>👋 Thanks for stopping by!</em></strong></p>
+      <p>Copyright &copy; 2018 -
+        <script>
+          document.write(new Date().getFullYear())
+        </script> – All rights reserved.
+      </p>
+      <p><a href="https://volkerotto.net/imprint/" title="Show the legal summary">Impressum</a></p>
+    </div>
+    <div class="lines-mask bottom">
+      <svg viewBox="0 -500 1034 792" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path class="p1"
+          d="M574.418 709.991C849.193 698.615 1001.5 570.671 944.874 479.211C888.245 387.751 932.867 308.157 914.556 201.531C902.003 128.436 668.167 112.936 570.574 73.1468C448.581 23.4107 412.158 169.418 251.968 199.191C91.7768 228.963 37.1601 449.308 141.927 547.018C246.693 644.727 299.644 721.367 574.418 709.991Z"
+          stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
+        <path class="p2"
+          d="M529.998 94.502C310.797 111.162 187.057 146.767 140.498 234.502C93.9393 322.236 195.999 386.501 159.998 542.001C123.998 697.501 370.434 699.607 435.998 730.501C517.954 769.118 613.717 706.649 747.998 677.502C882.279 648.354 931.686 359.669 876.725 280.315C821.764 200.961 749.199 77.842 529.998 94.502Z"
+          stroke="url(#paint0_linear_4_305)" stroke-width="4" />
+        <path class="p3"
+          d="M842.572 294.012C750.469 179.351 605.333 233.938 509.286 244.627C413.24 255.316 384.254 158.544 287.997 190.501C222.009 212.408 210.077 372.351 200.997 423C189.646 486.312 339.736 581.894 415.497 643.5C491.257 705.106 730.997 654 760.497 515.5C779.466 426.439 934.675 408.672 842.572 294.012Z"
+          stroke="#3A3A3A" stroke-opacity="0.1" stroke-width="4" />
+        <defs>
+          <linearGradient id="paint0_linear_4_305" x1="883.798" y1="439.935" x2="314.932" y2="343.598"
+            gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FAD722" />
+            <stop offset="0.9999" stop-color="#EE5959" />
+            <stop offset="1" stop-color="#EE5959" />
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
+  </footer>
 </body>
 </html>
