--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
     <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
     
-    <script defer src="{{ site.url }}/assets/js/main.js"></script>
+    <script defer async src="{{ site.url }}/assets/js/main.js"></script>
 </head>
 <!--
 
