--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,12 +39,9 @@
   <footer class="footer section">
     <div class="container">
       <p><strong><em>👋 Thanks for stopping by!</em></strong></p>
-      <p>Copyright &copy; 2018 -
-        <script>
-          document.write(new Date().getFullYear())
-        </script> – All rights reserved.
+      <p>Copyright &copy; 2018 - <script>document.write(new Date().getFullYear())</script> – All rights reserved.
       </p>
-      <p><a href="https://volkerotto.net/imprint/" title="Show the legal summary">Impressum</a> <a href="https://pagespeed.web.dev/analysis/https-volkerotto-net/07e67euoih" title="Checkout the PageSpeed Insights Score" target="_blank">⚡</a> <a href="https://www.accessibilitychecker.org/audit/?website=https%3A%2F%2Fvolkerotto.net%2F&flag=ge#" title="Checkout the WCAG Accessibility Ranking" target="_blank">♿</a></p>
+      <p><a href="https://volkerotto.net/imprint/" title="Show the legal summary">Imprint</a> <a href="https://pagespeed.web.dev/analysis/https-volkerotto-net/07e67euoih" title="Checkout the PageSpeed Insights Score" target="_blank">⚡</a> <a href="https://www.accessibilitychecker.org/audit/?website=https%3A%2F%2Fvolkerotto.net%2F&flag=ge#" title="Checkout the WCAG Accessibility Ranking" target="_blank">♿</a></p>
     </div>
     <div class="lines-mask bottom">
       <svg viewBox="0 -500 1034 792" fill="none" xmlns="http://www.w3.org/2000/svg">
