--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>
       {% if page.title %}
-        {{ page.title }} | {{ site.title }}
+        {{ site.title }} – {{ page.title }}
       {% else %}
         {{ site.title }}
       {% endif %}
