--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -595,3 +595,15 @@ dl dd {
   text-align: center;
   margin-bottom: 0;
 }
+
+.footer a {
+  display: inline-block;
+  padding: 5px;
+  opacity: .8;
+  font-weight: bold;
+  border: none;
+}
+
+.footer a:hover, .footer a:focus, .footer a:active {
+  opacity: 1;
+}
